--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -11,9 +11,9 @@
           <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
         </h1>
         <div class="post-meta">
-          {{ if .Date }}
+          {{ with .Date }}
             <span class="post-date">
-              {{ .Date.Format "2006-01-02" }}
+              {{ .Format "2006-01-02" }}
             </span>
           {{end}}
           {{ with .Params.Author }}
